Add subscription repository

--- a/Gyman/Gyman.PresentationLayer/App.xaml
+++ b/Gyman/Gyman.PresentationLayer/App.xaml
@@ -36,7 +36,12 @@
                     <DataTemplate DataType="{x:Type vm:TrainerDetailViewModel}">
                         <v:TrainerDetailView/>
                     </DataTemplate>
-                    
+
+                    <!-- Subscription Detail View Template -->
+                    <DataTemplate DataType="{x:Type vm:SubscriptionDetailViewModel}">
+                        <v:SubscriptionDetailView/>
+                    </DataTemplate>
+
                     <!-- Members View -->
                     <DataTemplate DataType="{x:Type vm:MembersViewModel}">
                         <v:MembersView/>
