--- a/Gyman/Gyman.PresentationLayer/Views/TrainerDetailView.xaml
+++ b/Gyman/Gyman.PresentationLayer/Views/TrainerDetailView.xaml
@@ -39,7 +39,7 @@
                Margin="10 0"/>
         <TextBox Grid.Column="0"
                  Grid.Row="3"
-                 Text="{Binding Member.Phone, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 Text="{Binding Trainer.Phone, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                  Margin="10 0 10 10"/>
 
         <StackPanel Grid.Column="0"
