--- a/Gyman/Gyman.PresentationLayer/Views/MemberDetailView.xaml
+++ b/Gyman/Gyman.PresentationLayer/Views/MemberDetailView.xaml
@@ -39,7 +39,7 @@
 
         <Label Grid.Column="0"
                Grid.Row="2"
-               Content="Рост"
+               Content="Рост (см.)"
                Margin="10 0"/>
         <TextBox Grid.Column="0"
                  Grid.Row="3"
@@ -53,7 +53,7 @@
 
         <Label Grid.Column="1"
                Grid.Row="2"
-               Content="Вес"
+               Content="Вес (кг.)"
                Margin="10 0"/>
         <TextBox Grid.Column="1"
                  Grid.Row="3"
