--- a/Gyman/Gyman.PresentationLayer/Views/SubscriptionDetailView.xaml
+++ b/Gyman/Gyman.PresentationLayer/Views/SubscriptionDetailView.xaml
@@ -2,6 +2,48 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
-        <TextBlock Text="Yahooo!"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition />
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <Label Grid.Column="0"
+               Grid.Row="0"
+               Content="Количество посещений"
+               Margin="10 0"/>
+        <TextBox Grid.Column="0"
+                 Grid.Row="1"
+                 Text="{Binding Subscription.NumberOfDays, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 Margin="10 0 10 10"/>
+
+        <Label Grid.Column="1"
+               Grid.Row="0"
+               Content="Стоимость (BYN)"
+               Margin="10 0"/>
+        <TextBox Grid.Column="1"
+                 Grid.Row="1"
+                 Text="{Binding Subscription.Cost, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 Margin="10 0 10 10"/>
+
+        <StackPanel Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Grid.Row="3"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Right"
+                    Margin="10">
+            <Button Content="Сохранить"
+                    Command="{Binding SaveCommand}"
+                    Width="125"
+                    Margin="0 0 10 0"/>
+            <Button Content="Удалить"
+                    Command="{Binding DeleteCommand}"
+                    Width="125"/>
+        </StackPanel>
     </Grid>
 </UserControl>
