Change training detail view model template

--- a/Gyman/Gyman.PresentationLayer/App.xaml
+++ b/Gyman/Gyman.PresentationLayer/App.xaml
@@ -37,6 +37,11 @@
                         <v:TrainerDetailView/>
                     </DataTemplate>
 
+                    <!-- Training Detail View Template -->
+                    <DataTemplate DataType="{x:Type vm:TrainingDetailViewModel}">
+                        <v:TrainingDetailView/>
+                    </DataTemplate>
+
                     <!-- Subscription Detail View Template -->
                     <DataTemplate DataType="{x:Type vm:SubscriptionDetailViewModel}">
                         <v:SubscriptionDetailView/>
