--- a/Gyman/Gyman.PresentationLayer/Views/TrainingDetailView.xaml
+++ b/Gyman/Gyman.PresentationLayer/Views/TrainingDetailView.xaml
@@ -1,7 +1,52 @@
 ﻿<UserControl x:Class="Gyman.PresentationLayer.Views.TrainingDetailView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro">
     <Grid>
-        <TextBlock Text="Training"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition />
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <Label Grid.Column="0"
+               Grid.Row="0"
+               Content="Начало"
+               Margin="10 0"/>
+        <mah:DateTimePicker Grid.Column="0"
+                            Grid.Row="1"
+                            DisplayDate="{Binding Training.Start, Mode=TwoWay,
+            UpdateSourceTrigger=PropertyChanged}"
+                            Margin="10 0 10 10"/>
+
+        <Label Grid.Column="1"
+               Grid.Row="0"
+               Content="Окончание"
+               Margin="10 0"/>
+        <mah:DateTimePicker Grid.Column="1"
+                            Grid.Row="1"
+                            DisplayDate="{Binding Training.End, Mode=TwoWay,
+            UpdateSourceTrigger=PropertyChanged}"
+                            Margin="10 0 10 10"/>
+
+        <StackPanel Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Grid.Row="3"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Right"
+                    Margin="10">
+            <Button Content="Сохранить"
+                    Command="{Binding SaveCommand}"
+                    Width="125"
+                    Margin="0 0 10 0"/>
+            <Button Content="Удалить"
+                    Command="{Binding DeleteCommand}"
+                    Width="125"/>
+        </StackPanel>
     </Grid>
 </UserControl>
