--- a/Gyman/Gyman.PresentationLayer/Views/TrainingDetailView.xaml
+++ b/Gyman/Gyman.PresentationLayer/Views/TrainingDetailView.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="Gyman.PresentationLayer.Views.TrainingDetailView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -8,6 +9,8 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition />
@@ -20,6 +23,7 @@
                Margin="10 0"/>
         <mah:DateTimePicker Grid.Column="0"
                             Grid.Row="1"
+                            DisplayDateStart="{Binding Source={x:Static sys:DateTime.Now}}"
                             DisplayDate="{Binding Training.Start, Mode=TwoWay,
             UpdateSourceTrigger=PropertyChanged}"
                             Margin="10 0 10 10"/>
@@ -30,13 +34,38 @@
                Margin="10 0"/>
         <mah:DateTimePicker Grid.Column="1"
                             Grid.Row="1"
+                            DisplayDateStart="{Binding Source={x:Static sys:DateTime.Now}}"
                             DisplayDate="{Binding Training.End, Mode=TwoWay,
             UpdateSourceTrigger=PropertyChanged}"
                             Margin="10 0 10 10"/>
 
+        <Label Grid.Column="0"
+               Grid.Row="2"
+               Content="Тренер"
+               Margin="10 0"/>
+        <ComboBox Grid.Column="0"
+                  Grid.Row="3"
+                  ItemsSource="{Binding Trainers}"
+                  DisplayMemberPath="DisplayMember"
+                  SelectedValuePath="Id"
+                  SelectedValue="{Binding Training.TrainerId, Mode=TwoWay}"
+                  Margin="10 0 10 10"/>
+
+        <Label Grid.Column="1"
+               Grid.Row="2"
+               Content="Клиент"
+               Margin="10 0"/>
+        <ComboBox Grid.Column="1"
+                  Grid.Row="3"
+                  ItemsSource="{Binding Members}"
+                  DisplayMemberPath="DisplayMember"
+                  SelectedValuePath="Id"
+                  SelectedValue="{Binding Training.MemberId, Mode=TwoWay}"
+                  Margin="10 0 10 10"/>
+
         <StackPanel Grid.Column="0"
                     Grid.ColumnSpan="2"
-                    Grid.Row="3"
+                    Grid.Row="5"
                     Orientation="Horizontal"
                     HorizontalAlignment="Right"
                     Margin="10">
